--- a/seismic_spectrogram.ipynb
+++ b/seismic_spectrogram.ipynb
@@ -103,7 +103,7 @@
    ],
    "source": [
     "#%% IMPORT SIGNAL DATA\n",
-    "segy_file_path = \"C:/Users/xjig04/Documents/workspace/data_science/data/rch3_pstm_filter_gain.sgy\"\n",
+    "segy_file_path = \".../seismic.sgy\"\n", #Path to the seismic SEG-Y volume.
     "vol, metadata, sample_rate = ut.import_segy_volume(file_path=segy_file_path)\n"
    ]
   },
