--- a/seismic_spectrogram.ipynb
+++ b/seismic_spectrogram.ipynb
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt=0.002 #Sample rate in seconds."
+    "dt=0.002 #Sample interval in seconds."
    ]
   },
   {
